--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 *.out
 *.app
 /VirtualMicrobiome/.vs/VirtualMicrobiome
+/VirtualMicrobiome/VirtualMicrobiome/x64/Debug
+/VirtualMicrobiome/x64/Debug
