--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Myxococcus.h">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
