--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,6 +140,7 @@
     <ClInclude Include="Habitat.h" />
     <ClInclude Include="MapHandler.h" />
     <ClInclude Include="Myxococcus.h" />
+    <ClInclude Include="Constants.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
