--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Myxococcus.cpp">
       <Filter>Kaynak Dosyalar</Filter>
     </ClCompile>
+    <ClCompile Include="BiomeHandler.cpp">
+      <Filter>Kaynak Dosyalar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapHandler.h">
@@ -48,6 +51,12 @@
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
     <ClInclude Include="Constants.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="BiomeHandler.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="Microbiome.h">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
   </ItemGroup>
