Bundan daha iyi template yazanı görmedim

--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Microbiome.h">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
+    <ClInclude Include="GenericBiomeHandler.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
