--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>Default</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,6 +139,7 @@
     <ClInclude Include="Bacteria.h" />
     <ClInclude Include="BiomeHandler.h" />
     <ClInclude Include="Erwinia.h" />
+    <ClInclude Include="GenericBiomeHandler.h" />
     <ClInclude Include="Habitat.h" />
     <ClInclude Include="MapHandler.h" />
     <ClInclude Include="Microbiome.h" />
