Ne eklediğimi hatırlamıyorum ¯\_(ツ)_/¯

--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BiomeHandler.cpp" />
+    <ClCompile Include="Food.cpp" />
     <ClCompile Include="MapHandler.cpp" />
     <ClCompile Include="VirtualMicrobiome.cpp" />
   </ItemGroup>
@@ -136,6 +137,7 @@
     <ClInclude Include="Bacteria.h" />
     <ClInclude Include="BiomeHandler.h" />
     <ClInclude Include="Erwinia.h" />
+    <ClInclude Include="Food.h" />
     <ClInclude Include="GenericBiomeHandler.h" />
     <ClInclude Include="Habitat.h" />
     <ClInclude Include="MapHandler.h" />
