--- a/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
+++ b/VirtualMicrobiome/VirtualMicrobiome/VirtualMicrobiome.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="BiomeHandler.cpp">
       <Filter>Kaynak Dosyalar</Filter>
     </ClCompile>
+    <ClCompile Include="Food.cpp">
+      <Filter>Kaynak Dosyalar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapHandler.h">
@@ -51,6 +54,9 @@
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
     <ClInclude Include="GenericBiomeHandler.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="Food.h">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
   </ItemGroup>
